[package]
name = "loa"
version = "0.0.2-alpha"
edition = "2021"

[dependencies]
colorex = "0.1.0"
lexer = { path = "front/lexer" }
parser = { path = "front/parser" }
codegen = { path = "./codegen" }

[workspace]
members = [
    "front/lexer",
    "front/parser",
    "front/error",
    "codegen",
    ".",
]

